package behavioral.stratery.duck_example;

public class FlyWithWings implements IFlyBehavior{
    @Override
    public String fly() {
        return "Bay...";
    }
}
