@startuml
'https://plantuml.com/sequence-diagram

abstract class Duck{
    + void performQuack()
    + void performFly()
    + void swim()
    + {abstract} void display()
    + void setFlyBehavior(IFlyBehavior f)
    + void setQuackBehavior(IQuacBehavior q)
}
interface IFlyBehavior{
    + String fly()
}
interface IQuackBehavior{
    + String quack()

}
class FlyWithWings
class FlyNoWay
class Quack
class SQuack
class VitGioi

Duck --> IFlyBehavior:flybehavior
Duck --> IQuackBehavior:quackbehavior
IFlyBehavior <|.. FlyWithWings
IFlyBehavior <|.. FlyNoWay
IQuackBehavior <|.. SQuack
IQuackBehavior <|.. Quack
Duck <|-- VitGioi

@enduml